I believe I have done what is reasonable for now. So dunzo yo.

--- a/hb-sales.html
+++ b/hb-sales.html
@@ -23,27 +23,12 @@
 	<title>Humble Bundle easy browser</title>
 </head>
 <body class="bg-dark">
-<div class="modal" id="viewMemberModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-				<h4 class="modal-title">TITAL</h4>
-			</div>
-			<div class="modal-body"></div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			</div>
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-
-<div class="container">
-	<div id="toolbar"></div>
+<div class="container bg-info">
+	<h1 class="text-light">Humble Bundle Easy Browser</h1>
+	<p class="text-warning">Note: Dates should now be in local time.  Dates too far out may be incorrect.  Humble Bundle seems to date items in a weird way and I haven't nor have a huge desire to make rhyme or reason out of it.</p>
+	<div id="toolbar">
+	</div>
 	<table id="table"></table>
-	<!-- <table id="table" class="table table-hover table-dark"></table> -->
 </div>
 
 <!-- Local (development)
