--- a/hb-sales.html
+++ b/hb-sales.html
@@ -31,7 +31,8 @@
 	<table id="table"></table>
 </div>
 
-<!-- Local (development)
+<!-- Local (development) -->
+<!--
 <script src="assets/jquery-3.3.1.min.js"></script>
 <script src="assets/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"></script>
 <script src="assets/bootstrap-4.1.1/dist/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"></script>
